egglog/tests/snapshots/files__proofs__rule_head_fast_path_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Rule
  (= (A) (B))
  (name "direct-union-with-heavy-tail")
  (premises (Fiat (= (Trigger) (Trigger))))
  (substitution))
