egglog/tests/snapshots/files__proofs__run_rule_selected_proof_testing.snap
---
source: egglog/tests/files.rs
assertion_line: 279
expression: proof_snapshot
---
(Rule
  (= (Wrap (A)) (A))
  (name "unwrap")
  (premises (Fiat (= (Selected (A)) (Selected (A)))))
  (substitution (x (A))))
