egglog/tests/snapshots/files__proofs__rw_analysis_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(let t0 (const-prop (L 14) (V "y") (I 10)))
(let t1 (RProg (L 13) (Ass (V "y") (Const (I 10)))))
(let t2 (Ass (V "y") (Add (V "x") (V "zero"))))
(let prf0 (Sym (= (Prog (L 13)) t2) (Fiat (= t2 (Prog (L 13))))))
(let t3 (const-prop (L 13) (V "x") (I 10)))
(let t4 (If (V "b") (L 6) (L 13)))
(let t5 (RProg (L 5) t4))
(let prop0 (= t5 t5))
(let prf1 (Fiat (= t4 (Prog (L 5)))))
(let prf2 (Sym (= (Prog (L 5)) t4) prf1))
(let t6 (const-prop (L 5) (V "b") (TopConst)))
(let t7 (Ass (V "x") (Const (I 10))))
(let t8 (RProg (L 4) t7))
(let prop1 (= t8 t8))
(let prf3 (Fiat (= t7 (Prog (L 4)))))
(let prf4 (Sym (= (Prog (L 4)) t7) prf3))
(let prf5
  (Congr
                                prop1
                                (Congr
                                  (= t8 (RProg (L 4) (Prog (L 4))))
                                  (Rule
                                    prop1
                                    (name
                                      "(rule ((= (Prog l) (Ass x (Const val))))
        ((RProg l (Ass x (Const val))))
           )")
                                    (premises prf4)
                                    (substitution
                                      (val (I 10))
                                      (l (L 4))
                                      (x (V "x"))))
                                  prf3
                                  1)
                                prf4
                                1))
(let t9 (const-prop (L 4) (V "b") (TopConst)))
(let t10 (Ass (V "zero") (Const (I 0))))
(let t11 (RProg (L 3) t10))
(let prop2 (= t11 t11))
(let prf6 (Fiat (= t10 (Prog (L 3)))))
(let prf7 (Sym (= (Prog (L 3)) t10) prf6))
(let prf8
  (Congr
                                    prop2
                                    (Congr
                                      (= t11 (RProg (L 3) (Prog (L 3))))
                                      (Rule
                                        prop2
                                        (name
                                          "(rule ((= (Prog l) (Ass x (Const val))))
        ((RProg l (Ass x (Const val))))
           )")
                                        (premises prf7)
                                        (substitution
                                          (val (I 0))
                                          (l (L 3))
                                          (x (V "zero"))))
                                      prf6
                                      1)
                                    prf7
                                    1))
(let t12 (const-prop (L 3) (V "b") (TopConst)))
(let t13 (Ass (V "one") (Const (I 1))))
(let t14 (RProg (L 2) t13))
(let prop3 (= t14 t14))
(let prf9 (Fiat (= t13 (Prog (L 2)))))
(let prf10 (Sym (= (Prog (L 2)) t13) prf9))
(let t15 (const-prop (L 2) (V "b") (TopConst)))
(let t16 (Ass (V "ten") (Const (I 10))))
(let t17 (RProg (L 1) t16))
(let prop4 (= t17 t17))
(let prf11 (Fiat (= t16 (Prog (L 1)))))
(let prf12 (Sym (= (Prog (L 1)) t16) prf11))
(let t18
  (const-prop
                                                (L 1)
                                                (V "b")
                                                (TopConst)))
(let t19
  (Ass
                                                      (V "b")
                                                      (Const (TopConst))))
(let t20 (RProg (L 0) t19))
(let prop5 (= t20 t20))
(let prf13
  (Fiat
                                                          (= t19 (Prog (L 0)))))
(let prf14
  (Sym
                                                        (= (Prog (L 0)) t19)
                                                        prf13))
(let prf15 (Fiat (= (TopConst) (TopConst))))
(let prf16 (Fiat (= () ())))
(let t21 (e (Const (I 10))))
(let prf17
  (Congr
                    prop0
                    (Congr
                      (= t5 (RProg (L 5) (Prog (L 5))))
                      (Rule
                        prop0
                        (name
                          "(rule ((= (Prog l) (If b l1 l2))
         (= $Top (const-prop l b)))
        ((RProg l (If b l1 l2)))
           )")
                        (premises
                          prf2
                          (Rule
                            (= t6 t6)
                            (name
                              "(rule ((RProg (L li) (Ass (V x) e))
         (= val (const-prop (L li) (V y)))
         (!= x y))
        ((set (const-prop (L (+ li 1)) (V y)) val))
           )")
                            (premises
                              prf5
                              (Rule
                                (= t9 t9)
                                (name
                                  "(rule ((RProg (L li) (Ass (V x) e))
         (= val (const-prop (L li) (V y)))
         (!= x y))
        ((set (const-prop (L (+ li 1)) (V y)) val))
           )")
                                (premises
                                  prf8
                                  (Rule
                                    (= t12 t12)
                                    (name
                                      "(rule ((RProg (L li) (Ass (V x) e))
         (= val (const-prop (L li) (V y)))
         (!= x y))
        ((set (const-prop (L (+ li 1)) (V y)) val))
           )")
                                    (premises
                                      (Congr
                                        prop3
                                        (Congr
                                          (= t14 (RProg (L 2) (Prog (L 2))))
                                          (Rule
                                            prop3
                                            (name
                                              "(rule ((= (Prog l) (Ass x (Const val))))
        ((RProg l (Ass x (Const val))))
           )")
                                            (premises prf10)
                                            (substitution
                                              (val (I 1))
                                              (l (L 2))
                                              (x (V "one"))))
                                          prf9
                                          1)
                                        prf10
                                        1)
                                      (Rule
                                        (= t15 t15)
                                        (name
                                          "(rule ((RProg (L li) (Ass (V x) e))
         (= val (const-prop (L li) (V y)))
         (!= x y))
        ((set (const-prop (L (+ li 1)) (V y)) val))
           )")
                                        (premises
                                          (Congr
                                            prop4
                                            (Congr
                                              (= t17 (RProg (L 1) (Prog (L 1))))
                                              (Rule
                                                prop4
                                                (name
                                                  "(rule ((= (Prog l) (Ass x (Const val))))
        ((RProg l (Ass x (Const val))))
           )")
                                                (premises prf12)
                                                (substitution
                                                  (val (I 10))
                                                  (l (L 1))
                                                  (x (V "ten"))))
                                              prf11
                                              1)
                                            prf12
                                            1)
                                          (Rule
                                            (= t18 t18)
                                            (name
                                              "(rule ((RProg (L li) (Ass x (Const k))))
        ((set (const-prop (L (+ li 1)) x) k))
           )")
                                            (premises
                                              (Congr
                                                prop5
                                                (Congr
                                                  (=
                                                    t20
                                                    (RProg (L 0) (Prog (L 0))))
                                                  (Rule
                                                    prop5
                                                    (name
                                                      "(rule ((= (Prog l) (Ass x (Const val))))
        ((RProg l (Ass x (Const val))))
           )")
                                                    (premises prf14)
                                                    (substitution
                                                      (val (TopConst))
                                                      (l (L 0))
                                                      (x (V "b"))))
                                                  prf13
                                                  1)
                                                prf14
                                                1))
                                            (substitution
                                              (li 0)
                                              (x (V "b"))
                                              (k (TopConst))))
                                          prf15
                                          prf16)
                                        (substitution
                                          t21
                                          (y "b")
                                          (li 1)
                                          (@n4 (TopConst))
                                          (x "ten")
                                          (val (TopConst))))
                                      prf15
                                      prf16)
                                    (substitution
                                      (e (Const (I 1)))
                                      (y "b")
                                      (li 2)
                                      (@n4 (TopConst))
                                      (x "one")
                                      (val (TopConst))))
                                  prf15
                                  prf16)
                                (substitution
                                  (e (Const (I 0)))
                                  (y "b")
                                  (li 3)
                                  (@n4 (TopConst))
                                  (x "zero")
                                  (val (TopConst))))
                              prf15
                              prf16)
                            (substitution
                              t21
                              (y "b")
                              (li 4)
                              (@n4 (TopConst))
                              (x "x")
                              (val (TopConst))))
                          prf15)
                        (substitution
                          (l1 (L 6))
                          (l (L 5))
                          (l2 (L 13))
                          (@n21 (TopConst))
                          (b (V "b"))))
                      prf1
                      1)
                    prf2
                    1))
(let t22 (const-prop (L 5) (V "x") (I 10)))
(let prf18 (Fiat (= (I 10) (I 10))))
(let prf19
  (Rule
                (= t3 t3)
                (name
                  "(rule ((RProg l (If b l1 l2))
         (= val (const-prop l x)))
        ((set (const-prop l1 x) val)
         (set (const-prop l2 x) val))
           )")
                (premises
                  prf17
                  (Rule
                    (= t22 t22)
                    (name
                      "(rule ((RProg (L li) (Ass x (Const k))))
        ((set (const-prop (L (+ li 1)) x) k))
           )")
                    (premises prf5)
                    (substitution (li 4) (x (V "x")) (k (I 10))))
                  prf18)
                (substitution
                  (l1 (L 6))
                  (x (V "x"))
                  (l (L 5))
                  (l2 (L 13))
                  (val (I 10))
                  (b (V "b"))
                  (@n18 (I 10)))))
(let t23 (const-prop (L 13) (V "zero") (I 0)))
(let t24 (const-prop (L 5) (V "zero") (I 0)))
(let t25 (const-prop (L 4) (V "zero") (I 0)))
(let prf20 (Fiat (= (I 0) (I 0))))
(let prf21
  (Rule
                (= t23 t23)
                (name
                  "(rule ((RProg l (If b l1 l2))
         (= val (const-prop l x)))
        ((set (const-prop l1 x) val)
         (set (const-prop l2 x) val))
           )")
                (premises
                  prf17
                  (Rule
                    (= t24 t24)
                    (name
                      "(rule ((RProg (L li) (Ass (V x) e))
         (= val (const-prop (L li) (V y)))
         (!= x y))
        ((set (const-prop (L (+ li 1)) (V y)) val))
           )")
                    (premises
                      prf5
                      (Rule
                        (= t25 t25)
                        (name
                          "(rule ((RProg (L li) (Ass x (Const k))))
        ((set (const-prop (L (+ li 1)) x) k))
           )")
                        (premises prf8)
                        (substitution (li 3) (x (V "zero")) (k (I 0))))
                      prf20
                      prf16)
                    (substitution
                      t21
                      (y "zero")
                      (li 4)
                      (@n4 (I 0))
                      (x "x")
                      (val (I 0))))
                  prf20)
                (substitution
                  (l1 (L 6))
                  (x (V "zero"))
                  (l (L 5))
                  (l2 (L 13))
                  (val (I 0))
                  (b (V "b"))
                  (@n18 (I 0)))))
(let t26 (add-val (I 10) (I 0)))
(Rule
  (= (@ExistsConstructor) (@ExistsConstructor))
  (name "@prove_exists_rule")
  (premises
    (Rule
      (= t0 t0)
      (name
        "(rule ((RProg (L li) (Ass x (Const k))))
      ((set (const-prop (L (+ li 1)) x) k))
         )")
      (premises
        (Rule
          (= t1 t1)
          (name
            "(rule ((= (Prog l) (Ass x (Add x1 x2)))
       (= (I val) (add-val (const-prop l x1) (const-prop l x2))))
      ((RProg l (Ass x (Const (I val)))))
         )")
          (premises
            prf0
            prf19
            prf21
            (Sym
              (= (I 10) t26)
              (Rule
                (= t26 (I 10))
                (name "(rewrite (add-val (I x) (I y)) (I (+ x y)))")
                (premises
                  (Rule
                    (= t26 t26)
                    (name
                      "(rule ((= (Prog l) (Ass x (Add x1 x2)))
       (= v1 (const-prop l x1))
       (= v2 (const-prop l x2)))
      ((add-val v1 v2))
         )")
                    (premises prf0 prf19 prf18 prf21 prf20)
                    (substitution
                      (@n5 (I 10))
                      (v2 (I 0))
                      (x1 (V "x"))
                      (x2 (V "zero"))
                      (l (L 13))
                      (@n6 (I 0))
                      (x (V "y"))
                      (v1 (I 10)))))
                (substitution (__rewrite_root t26) (x 10) (y 0)))))
          (substitution
            (x1 (V "x"))
            (x2 (V "zero"))
            (l (L 13))
            (@n9 (I 10))
            (@n10 (I 0))
            (val 10)
            (x (V "y")))))
      (substitution (li 13) (x (V "y")) (k (I 10))))
    prf18)
  (substitution (@n23 (I 10))))
