egglog/tests/snapshots/files__proofs__schedule_demo_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(let prf0 (Fiat (= (right 0) (right 0))))
(let prf1
  (Rule
                                        (= (left 1) (left 1))
                                        (name
                                          "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                                        (premises
                                          (Fiat (= (left 0) (left 0)))
                                          prf0)
                                        (substitution (x 0))))
(let prf2
  (Rule
                                        (= (right 1) (right 1))
                                        (name
                                          "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                                        (premises prf1 prf0 (Eval))
                                        (substitution (x 1) (y 0))))
(let prf3
  (Rule
                                    (= (left 2) (left 2))
                                    (name
                                      "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                                    (premises prf1 prf2)
                                    (substitution (x 1))))
(let prf4
  (Rule
                                    (= (right 2) (right 2))
                                    (name
                                      "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                                    (premises prf3 prf2 (Eval))
                                    (substitution (x 2) (y 1))))
(let prf5
  (Rule
                                (= (left 3) (left 3))
                                (name
                                  "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                                (premises prf3 prf4)
                                (substitution (x 2))))
(let prf6
  (Rule
                                (= (right 3) (right 3))
                                (name
                                  "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                                (premises prf5 prf4 (Eval))
                                (substitution (x 3) (y 2))))
(let prf7
  (Rule
                            (= (left 4) (left 4))
                            (name
                              "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                            (premises prf5 prf6)
                            (substitution (x 3))))
(let prf8
  (Rule
                            (= (right 4) (right 4))
                            (name
                              "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                            (premises prf7 prf6 (Eval))
                            (substitution (x 4) (y 3))))
(let prf9
  (Rule
                        (= (left 5) (left 5))
                        (name
                          "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                        (premises prf7 prf8)
                        (substitution (x 4))))
(let prf10
  (Rule
                        (= (right 5) (right 5))
                        (name
                          "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                        (premises prf9 prf8 (Eval))
                        (substitution (x 5) (y 4))))
(let prf11
  (Rule
                    (= (left 6) (left 6))
                    (name
                      "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                    (premises prf9 prf10)
                    (substitution (x 5))))
(let prf12
  (Rule
                    (= (right 6) (right 6))
                    (name
                      "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                    (premises prf11 prf10 (Eval))
                    (substitution (x 6) (y 5))))
(let prf13
  (Rule
                (= (left 7) (left 7))
                (name
                  "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                (premises prf11 prf12)
                (substitution (x 6))))
(let prf14
  (Rule
                (= (right 7) (right 7))
                (name
                  "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                (premises prf13 prf12 (Eval))
                (substitution (x 7) (y 6))))
(let prf15
  (Rule
            (= (left 8) (left 8))
            (name
              "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
            (premises prf13 prf14)
            (substitution (x 7))))
(let prf16
  (Rule
            (= (right 8) (right 8))
            (name
              "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
            (premises prf15 prf14 (Eval))
            (substitution (x 8) (y 7))))
(let prf17
  (Rule
        (= (left 9) (left 9))
        (name
          "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
        (premises prf15 prf16)
        (substitution (x 8))))
(Rule
  (= (left 10) (left 10))
  (name
    "(rule ((left x)
       (right x))
      ((left (+ x 1)))
        :ruleset step-left )")
  (premises
    prf17
    (Rule
      (= (right 9) (right 9))
      (name
        "(rule ((left x)
       (right y)
       (= x (+ y 1)))
      ((right x))
        :ruleset step-right )")
      (premises prf17 prf16 (Eval))
      (substitution (x 9) (y 8))))
  (substitution (x 9)))
(let prf0 (Fiat (= (right 0) (right 0))))
(let prf1
  (Rule
                                        (= (left 1) (left 1))
                                        (name
                                          "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                                        (premises
                                          (Fiat (= (left 0) (left 0)))
                                          prf0)
                                        (substitution (x 0))))
(let prf2
  (Rule
                                        (= (right 1) (right 1))
                                        (name
                                          "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                                        (premises prf1 prf0 (Eval))
                                        (substitution (x 1) (y 0))))
(let prf3
  (Rule
                                    (= (left 2) (left 2))
                                    (name
                                      "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                                    (premises prf1 prf2)
                                    (substitution (x 1))))
(let prf4
  (Rule
                                    (= (right 2) (right 2))
                                    (name
                                      "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                                    (premises prf3 prf2 (Eval))
                                    (substitution (x 2) (y 1))))
(let prf5
  (Rule
                                (= (left 3) (left 3))
                                (name
                                  "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                                (premises prf3 prf4)
                                (substitution (x 2))))
(let prf6
  (Rule
                                (= (right 3) (right 3))
                                (name
                                  "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                                (premises prf5 prf4 (Eval))
                                (substitution (x 3) (y 2))))
(let prf7
  (Rule
                            (= (left 4) (left 4))
                            (name
                              "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                            (premises prf5 prf6)
                            (substitution (x 3))))
(let prf8
  (Rule
                            (= (right 4) (right 4))
                            (name
                              "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                            (premises prf7 prf6 (Eval))
                            (substitution (x 4) (y 3))))
(let prf9
  (Rule
                        (= (left 5) (left 5))
                        (name
                          "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                        (premises prf7 prf8)
                        (substitution (x 4))))
(let prf10
  (Rule
                        (= (right 5) (right 5))
                        (name
                          "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                        (premises prf9 prf8 (Eval))
                        (substitution (x 5) (y 4))))
(let prf11
  (Rule
                    (= (left 6) (left 6))
                    (name
                      "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                    (premises prf9 prf10)
                    (substitution (x 5))))
(let prf12
  (Rule
                    (= (right 6) (right 6))
                    (name
                      "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                    (premises prf11 prf10 (Eval))
                    (substitution (x 6) (y 5))))
(let prf13
  (Rule
                (= (left 7) (left 7))
                (name
                  "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
                (premises prf11 prf12)
                (substitution (x 6))))
(let prf14
  (Rule
                (= (right 7) (right 7))
                (name
                  "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
                (premises prf13 prf12 (Eval))
                (substitution (x 7) (y 6))))
(let prf15
  (Rule
            (= (left 8) (left 8))
            (name
              "(rule ((left x)
         (right x))
        ((left (+ x 1)))
          :ruleset step-left )")
            (premises prf13 prf14)
            (substitution (x 7))))
(let prf16
  (Rule
            (= (right 8) (right 8))
            (name
              "(rule ((left x)
         (right y)
         (= x (+ y 1)))
        ((right x))
          :ruleset step-right )")
            (premises prf15 prf14 (Eval))
            (substitution (x 8) (y 7))))
(Rule
  (= (right 9) (right 9))
  (name
    "(rule ((left x)
       (right y)
       (= x (+ y 1)))
      ((right x))
        :ruleset step-right )")
  (premises
    (Rule
      (= (left 9) (left 9))
      (name
        "(rule ((left x)
       (right x))
      ((left (+ x 1)))
        :ruleset step-left )")
      (premises prf15 prf16)
      (substitution (x 8)))
    prf16
    (Eval))
  (substitution (x 9) (y 8)))
