egglog/tests/snapshots/files__proofs__subsume_relation_proof_testing.snap
---
source: egglog/tests/files.rs
expression: proof_snapshot
---
(Congr
  (= (R (A) (C)) (R (A) (B)))
  (Fiat (= (R (A) (C)) (R (A) (C))))
  (Sym (= (C) (B)) (Fiat (= (B) (C))))
  1)
